--- a/Project.toml
+++ b/Project.toml
@@ -11,6 +11,7 @@ FileIO = "5789e2e9-d7fb-5bc7-8068-2c6fae9b9549"
 HCubature = "19dc6840-f33b-545b-b366-655c7e3ffd49"
 JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
 NearestNeighbors = "b8a86587-4115-5ab1-83bc-aa920d37bbce"
 OffsetArrays = "6fe1bfb0-de20-5000-8ca7-80f57d26f881"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
