--- a/Project.toml
+++ b/Project.toml
@@ -6,6 +6,8 @@ version = "0.1.0"
 [deps]
 BandedMatrices = "aae01518-5342-5314-be14-df237901396f"
 Cubature = "667455a9-e2ce-5579-9412-b964f529a492"
+Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
+DelimitedFiles = "8bb1440f-4735-579b-a4ab-409b98df4dab"
 FFTW = "7a1cc6ca-52ef-59f5-83cd-3a7055c09341"
 FileIO = "5789e2e9-d7fb-5bc7-8068-2c6fae9b9549"
 HCubature = "19dc6840-f33b-545b-b366-655c7e3ffd49"
