--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,7 @@ authors = ["Peter Simon <psimon0420@gmail.com> and contributors"]
 version = "0.1.0"
 
 [deps]
+AbstractTrees = "1520ce14-60c1-5f80-bbc7-55ef81b5835c"
 BandedMatrices = "aae01518-5342-5314-be14-df237901396f"
 Cubature = "667455a9-e2ce-5579-9412-b964f529a492"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
@@ -16,7 +17,6 @@ JuliaInterpreter = "aa1ae85d-cabe-5617-a682-6adf51b2e16a"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
 LoggingExtras = "e6f89c97-d47a-5376-807f-9c37f3926c36"
-MethodAnalysis = "85b6ec6f-f7df-4429-9514-a64bcd9ee824"
 NearestNeighbors = "b8a86587-4115-5ab1-83bc-aa920d37bbce"
 OffsetArrays = "6fe1bfb0-de20-5000-8ca7-80f57d26f881"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
@@ -25,7 +25,6 @@ RecipesBase = "3cdcf5f2-1ef4-517c-9805-6587b60abb01"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 SafeTestsets = "1bc83da4-3b8d-516f-aca4-4fe02f6d838f"
-Serialization = "9e88b42a-f829-5b0c-bbe9-9e923198166b"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 Triangulate = "f7e6ffb2-c36d-4f8f-a77e-16e897189344"
