--- a/Project.toml
+++ b/Project.toml
@@ -33,6 +33,7 @@ Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
 [compat]
 Revise = ">= 2"
 julia = "1"
+Reexport = "^1.0.0"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
