--- a/Project.toml
+++ b/Project.toml
@@ -4,16 +4,11 @@ authors = ["Peter Simon <psimon0420@gmail.com> and contributors"]
 version = "0.1.0"
 
 [deps]
-AbstractTrees = "1520ce14-60c1-5f80-bbc7-55ef81b5835c"
-BandedMatrices = "aae01518-5342-5314-be14-df237901396f"
-Cubature = "667455a9-e2ce-5579-9412-b964f529a492"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 DelimitedFiles = "8bb1440f-4735-579b-a4ab-409b98df4dab"
 FFTW = "7a1cc6ca-52ef-59f5-83cd-3a7055c09341"
 FileIO = "5789e2e9-d7fb-5bc7-8068-2c6fae9b9549"
-HCubature = "19dc6840-f33b-545b-b366-655c7e3ffd49"
 JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
-JuliaInterpreter = "aa1ae85d-cabe-5617-a682-6adf51b2e16a"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
 LoggingExtras = "e6f89c97-d47a-5376-807f-9c37f3926c36"
@@ -23,20 +18,24 @@ Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
 RecipesBase = "3cdcf5f2-1ef4-517c-9805-6587b60abb01"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
-Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
-SafeTestsets = "1bc83da4-3b8d-516f-aca4-4fe02f6d838f"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 Triangulate = "f7e6ffb2-c36d-4f8f-a77e-16e897189344"
 Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
 
 [compat]
+JLD2 = "0.4.5"
 Reexport = "^1.0.0"
-Revise = ">= 2"
 julia = "1"
 
 [extras]
+Cubature = "667455a9-e2ce-5579-9412-b964f529a492"
+Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
+HCubature = "19dc6840-f33b-545b-b366-655c7e3ffd49"
+Literate = "98b081ad-f1c9-55d3-8b20-4c87d4299306"
+SafeTestsets = "1bc83da4-3b8d-516f-aca4-4fe02f6d838f"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
-test = ["Test"]
+docs = ["Documenter", "Literate"]
+test = ["Test", "Cubature", "HCubature", "SafeTestsets"]
