--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -1,4 +1,4 @@
 [deps]
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
 Literate = "98b081ad-f1c9-55d3-8b20-4c87d4299306"
-PSSFSS = "6b20a5d4-3c6c-44cd-883b-1480592d72be"
+Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
