--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -49,19 +49,10 @@ jobs:
         with:
           version: '1'
       - run: |
-          julia --project=docs -e '
-            import Pkg; Pkg.add("Documenter")
-            using Pkg
-            Pkg.develop(PackageSpec(path=pwd()))
-            Pkg.instantiate()'
-      - run: |
-          julia --project=docs -e '
-            import Pkg; Pkg.add("Documenter")
-            using Documenter: doctest
-            using PSSFSS
-            doctest(PSSFSS)'
+          julia --project=docs -e 'Pkg.instantiate()'
       - run: julia --project=docs --color=yes docs/make.jl
         env:
+          JULIA_DEBUG: Documenter
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           DOCUMENTER_KEY: ${{ secrets.DOCUMENTER_KEY }}
           GKSwstype: "100" # https://discourse.julialang.org/t/generation-of-documentation-fails-qt-qpa-xcb-could-not-connect-to-display/60988
