Simplify doc generation portion of CI.yml
Copy setup of fredrikekre

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -49,17 +49,7 @@ jobs:
         with:
           version: '1'
       - run: |
-          julia --project=docs -e '
-            import Pkg; Pkg.add("Documenter")
-            using Pkg
-            Pkg.develop(PackageSpec(path=pwd()))
-            Pkg.instantiate()'
-      - run: |
-          julia --project=docs -e '
-            import Pkg; Pkg.add("Documenter")
-            using Documenter: doctest
-            using PSSFSS
-            doctest(PSSFSS)'
+          julia --project=docs -e 'import Pkg; Pkg.instantiate()'
       - run: julia --project=docs --color=yes docs/make.jl
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
